# Bio-Inspired_Cross-Species_Navigator

./: .gitignore  FINAL_INSTRUCTIONS.md  PROJECT_STATUS.md  README.md  ROS1_SIMULATION_GUIDE.md  SIMULATION_COMPLETE.md  rviz_config.rviz  test_project.py  verify_complete_functionality.py
.github/workflows/: main.yml
arduino_controller/Robot_Controller/: Robot_Controller.ino
ros1_ws/: setup.sh  start_training.sh
ros1_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
ros1_ws/devel/lib/pkgconfig/: bio_inspired_nav.pc
ros1_ws/src/bio_inspired_nav/: CMakeLists.txt  README.md  package.xml
ros1_ws/src/bio_inspired_nav/launch/: complete_simulation.launch  gazebo_manual.launch  gazebo_visualization.launch  replay_results_rviz.launch  rviz_visualization.launch  simple_simulation.launch
ros1_ws/src/bio_inspired_nav/rviz/: bio_nav.rviz  navigation.rviz
ros2_ws/src/robot_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_navigation/config/: localization.yaml  nav2_params.yaml  navigation_params.yaml  slam_toolbox.yaml
ros2_ws/src/robot_navigation/launch/: autonomous_navigation.launch.py  rplidar_standalone.launch.py  simple_navigation.launch.py  start_navigation.launch.py  working_navigation.launch.py
ros2_ws/src/robot_navigation/resource/: robot_navigation
ros2_ws/src/robot_navigation/robot_navigation/: base_controller_node.py  camera_publisher.py  gas_sensor_visualizer.py  mission_manager_node.py  mock_arduino_node.py  mock_sensors_node.py  navigator_node.py  vision_processor_node.py
(+24 files in other folders)
